# us-population-agent

./: .env.example  .gitignore  README.md  REFLECTION.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
docs/: ASSIGNMENT.md  DEPLOY_STREAMLIT.md  TECHNICAL_DESIGN.md
evals/: assignment_context.jsonl  golden.jsonl  phase4_degradation.jsonl
pages/: 1_💬_Chat.py
scripts/: build_embeddings.py  etl_snapshot.py  test_cortex.py  test_gemini.py  test_ollama.py  test_snowflake_connection.py  verify_assignment.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_phase5.py
src/census_agent/: __init__.py  config.py  feedback.py  logging_setup.py  trace.py
src/census_agent/agent/: __init__.py  degradation.py  executor.py  orchestrator.py  rewriter.py  sql_builder.py  sql_generator.py  synthesizer.py
src/census_agent/data/: __init__.py  duckdb_backend.py  gateway.py  snowflake_backend.py
src/census_agent/eval/: gate.py  harness.py
src/census_agent/guardrails/: __init__.py  faithfulness.py  input.py  sql_validator.py
src/census_agent/llm/: __init__.py  chat.py  embeddings.py
src/census_agent/observability/: __init__.py  trace_store.py
tests/: conftest.py  test_agent.py  test_assignment.py  test_config.py  test_degradation.py  test_executor.py  test_faithfulness.py  test_feedback.py  test_gateway.py  test_phase4_e2e.py  test_phase5_e2e.py  test_semantic.py  test_sql_validator.py  test_trace_store.py
ui/: bootstrap.py  constants.py  landing_styles.py  theme.py
(+7 files in other folders)
