[project]
name = "census-agent"
version = "0.1.0"
description = "US population chat agent grounded in Snowflake Open Census data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "python-dotenv>=1.0.0",
    "certifi>=2024.0.0",
    "snowflake-connector-python>=3.12.0",
    "sqlglot>=25.0.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end tests that may call Gemini (deselect with '-m \"not e2e\"')",
]
